--- a/35C10K和C1000K问题回顾.md
+++ b/35C10K和C1000K问题回顾.md
@@ -16,5 +16,25 @@ IO事件通知的两种方式:**水平触发,边缘触发.**
 1. **水平触发**:只要文件描述符可以非阻塞地执行 I/O ，就会触发通知。也就是说，应用程序可以随时检查文件描述符的状态，然后再根据状态，进行 I/O 操作。
 2. **边缘触发**:只有在文件描述符的状态发生改变（也就是 I/O 请求达到）时，才发送一次通知。这时候，应用程序需要尽可能多地执行 I/O，直到无法继续读写，才可以停止。如果 I/O 没执行完，或者因为某种原因没来得及处理，那么这次通知也就丢失了。
 
-使用非阻塞 I/O 和水平触发通知，比如使用 select 或者 poll。
+**解决方法**
 
+1. 使用非阻塞 I/O 和水平触发通知，比如使用 select 或者 poll.
+2. 使用非阻塞 I/O 和边缘触发通知，比如 epoll。
+3. 使用异步 I/O（Asynchronous I/O，简称为 AIO）
+
+## 工作模型优化
+
+1. 主进程 + 多个 worker 子进程，这也是最常用的一种模型.
+2. 监听到相同端口的多进程模型
+
+
+
+## C1000K&C10M
+
+想实现C10M,其主要问题在于从网卡中断带来的硬中断处理程序开始，到软中断中的各层网络协议处理，最后再到应用程序，这个路径实在是太长了，就会导致网络包的处理优化，到了一定程度后，就无法更进一步了.
+
+解决这个问题，最重要就是跳过内核协议栈的冗长路径，把网络包直接送到要处理的应用程序那里去。这里有两种常见的机制，DPDK 和 XDP.
+
+DPDK
+
+XDP
